src/objects/OpportunityAccount__c.object
<CustomObject>
    <description>CORE</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Account affiliated with the opportunity.</description>
        <inlineHelpText>Account affiliated with the opportunity.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>AffiliationType__c</fullName>
        <description>Describes the type of affiliation between the opportunity and account.</description>
        <inlineHelpText>Describes the type of affiliation between the opportunity and account.</inlineHelpText>
        <label>AffiliationType</label>
        <picklist>
            <picklistValues>
                <fullName>Buying Consortium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bookstore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pathway institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diocese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the affiliation between account and opportunity.</description>
        <inlineHelpText>A detailed description of the affiliation between account and opportunity.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Opportunity affiliated to the account.</description>
        <inlineHelpText>Opportunity affiliated to the account.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Affiliations</relationshipLabel>
        <relationshipName>OpportunityAffiliation</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Affiliation_Type__c</fullName>
        <label>Other Affiliation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Split__c</fullName>
        <inlineHelpText>This is the dollar value this account will be contributing to the total dollar value amount</inlineHelpText>
        <label>Revenue Split</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Opportunity Account</label>
    <nameField>
        <displayFormat>OAN-{00000}</displayFormat>
        <label>Opportunity Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OtherAffiliationTypeRequired</fullName>
        <active>true</active>
        <description>CORE - If &apos;Other&apos; is selected for Affiliation Type, an &apos;Other Affiliation Type&apos; must be provided</description>
        <errorConditionFormula>AND(ISPICKVAL(AffiliationType__c,&quot;Other&quot;), ISBLANK(Other_Affiliation_Type__c))</errorConditionFormula>
        <errorDisplayField>Other_Affiliation_Type__c</errorDisplayField>
        <errorMessage>If &apos;Other&apos; is selected for Affiliation Type, an &apos;Other Affiliation Type&apos; must be provided</errorMessage>
    </validationRules>
</CustomObject>